--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,19 +8,19 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    color: #fff; /* Change text color to white for better contrast */
+    color: #fff;
 }
 
 .container {
     max-width: 400px;
     width: 100%;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     text-align: center;
-    color: #333; /* Reset text color for container content */
+    color: #333;
 }
 
 h2 {
